--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -22,9 +22,9 @@
                 <h2>Registration Form</h2>
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <label th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
+                        <label th:if="${#fields.hasErrors('username')}" th:errors="*{username}"
                                class="validation-message"></label>
-                        <input type="text" th:field="*{name}" placeholder="Name"
+                        <input type="text" th:field="*{username}" placeholder="username"
                                class="form-control" />
                     </div>
                 </div>
