--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -56,7 +56,7 @@
 
                 <!--<div th:text="'Hello, ' + ${username} + '!' + 'role: ' + ${role}"></div>-->
 
-                <div th:switch="${username !=null}">
+                <div th:switch="${user !=null}">
                     <span th:case="${false}">
                         User is not logged in
                         <form th:action="@{/login}" method="get">
@@ -67,7 +67,7 @@
                           </form>
                     </span>
                     <span th:case="${true}">
-                        <div th:text="${username}"/>
+                        <div th:text="${user.username}"/>
                           <form th:action="@{/logout}" method="post">
                               <input type="submit" value="Sign Out"/>
                           </form>
@@ -99,36 +99,44 @@
             <div class="carousel-inner" role="listbox">
 
                 <div class="item active">
-                    <img src="/images/bg000000.jpg" alt="Chania" width="460" height="345">
+                    <img src="/images/product_foto/7.jpg" alt="Chania" width="460" height="345">
                     <div class="carousel-caption">
                         <h3>Chania</h3>
                         <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
                     </div>
                 </div>
-
-                <div class="item">
-                    <img src="/images/bg000000.jpg" alt="Chania" width="460" height="345">
+                <div class="item" th:each="product : ${products}">
+                    <img th:src="${product.imgUrl}" alt="Chania" width="460" height="345">
                     <div class="carousel-caption">
                         <h3>Chania</h3>
                         <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
                     </div>
+
                 </div>
 
-                <div class="item">
-                    <img src="/images/bg000000.jpg" alt="Flower" width="460" height="345">
-                    <div class="carousel-caption">
-                        <h3>Flowers</h3>
-                        <p>Beautiful flowers in Kolymbari, Crete.</p>
-                    </div>
-                </div>
+                <!--<div class="item">-->
+                <!--<img src="/images/bg000000.jpg" alt="Chania" width="460" height="345">-->
+                <!--<div class="carousel-caption">-->
+                <!--<h3>Chania</h3>-->
+                <!--<p>The atmosphere in Chania has a touch of Florence and Venice.</p>-->
+                <!--</div>-->
+                <!--</div>-->
 
-                <div class="item">
-                    <img src="/images/bg000000.jpg" alt="Flower" width="460" height="345">
-                    <div class="carousel-caption">
-                        <h3>Flowers</h3>
-                        <p>Beautiful flowers in Kolymbari, Crete.</p>
-                    </div>
-                </div>
+                <!--<div class="item">-->
+                <!--<img src="/images/bg000000.jpg" alt="Flower" width="460" height="345">-->
+                <!--<div class="carousel-caption">-->
+                <!--<h3>Flowers</h3>-->
+                <!--<p>Beautiful flowers in Kolymbari, Crete.</p>-->
+                <!--</div>-->
+                <!--</div>-->
+
+                <!--<div class="item">-->
+                <!--<img src="/images/bg000000.jpg" alt="Flower" width="460" height="345">-->
+                <!--<div class="carousel-caption">-->
+                <!--<h3>Flowers</h3>-->
+                <!--<p>Beautiful flowers in Kolymbari, Crete.</p>-->
+                <!--</div>-->
+                <!--</div>-->
 
             </div>
 
