--- a/src/main/resources/static/css/mystyle.css
+++ b/src/main/resources/static/css/mystyle.css
@@ -2,7 +2,7 @@ body
 {
 	background-color: #151424;
 	background-image: url('../images/bg000000.jpg');
-	background-repeat: no-repeat;
+	background-repeat: repeat-y;
 	color: #646464;
 	font-family: Tahoma;
 	font-size: 15px;
@@ -17,7 +17,7 @@ body
 	margin: 0 auto;
 	padding: 0;
 	width: 1200px;
-	height:1200px;
+
 }
 #hat
 {
@@ -25,10 +25,20 @@ body
     height:130px;
      background:#f1f1f1;
 }
-.left
+#footer
 {
-    float:left;
+
+    height:130px;
+    background:#f1f1f1;
 }
+.left
+ {
+     float:left;
+ }
+ .right
+ {
+     float:right;
+ }
 
 #clock
 {
@@ -37,4 +47,33 @@ body
     margin-top:45px;
     font-size: 25px;
     text-align:center;
+}
+.price{
+
+    background-color: #ffffff;
+    color: #000000;
+    font-size: 40px;
+}
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+  width: 70%;
+  margin: auto;
+  height:800px;
+}
+#head_banner{
+    height:400px;
+    width:900px
+    margin: auto;
+}
+.carousel-inner2 > .item > img,
+.carousel-inner2 > .item > a > img {
+  width: 90%;
+  margin: auto;
+  height:300px;
+}
+
+#two_simple_banner{
+  width: 600px;
+  margin: auto;
+  height:400px;
 }
