--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,15 +8,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <style>
-          .carousel-inner > .item > img,
-          .carousel-inner > .item > a > img {
-              width: 70%;
-              margin: auto;
-              height:800px;
-          }
-
-    </style>
 
     <script type="text/javascript">
         function startTime()
@@ -42,51 +33,64 @@
 </head>
 <body onload="startTime()">
 <div class="maindiv" id="main_div">
+    <div th:insert="hat :: hat"></div>
 
-    <div id="hat">
-        <div id="hat_top">
-            <div class="left">
-                <img id="img_1" src="images/logo.png" width="130px" height="130px" alt="Logo " />
-            </div>
-            <div class="left">
-                <p id="clock"> dsghsdgh!!!!!</p>
 
-            </div>
+    <div class="container">
+        <div id="head_banner">
+            <div id="myCarousel2" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel2" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel2" data-slide-to="1"></li>
+                    <li data-target="#myCarousel2" data-slide-to="2"></li>
+                    <li data-target="#myCarousel2" data-slide-to="3"></li>
+                </ol>
 
-            <div class="right">
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
 
-                <!--<div th:text="'Hello, ' + ${username} + '!' + 'role: ' + ${role}"></div>-->
+                    <div class="item active">
+                        <img src="/images/banner/blue_banner.png" alt="blue" width="250" height="250">
 
-                <div th:switch="${user !=null}">
-                    <span th:case="${false}">
-                        User is not logged in
-                        <form th:action="@{/login}" method="get">
-                              <input type="submit" value="Войти"/>
-                          </form>
-                          <form th:action="@{/registration}" method="get">
-                              <input type="submit" value="Зарегистрироваться"/>
-                          </form>
-                    </span>
-                    <span th:case="${true}">
-                        <div th:text="${user.username}"/>
-                          <form th:action="@{/logout}" method="post">
-                              <input type="submit" value="Sign Out"/>
-                          </form>
-                    </span>
-                    <span th:case="*">Should never happen, but who knows...</span>
+                    </div>
+                    <div class="item">
+                        <img src="/images/banner/green_banner.png" alt="green" width="250" height="250">
+
+                    </div>
+                    <div class="item">
+                        <img src="/images/banner/red_banner.png" alt="red" width="250" height="250">
+
+                    </div>
+                    <div class="item">
+                        <img src="/images/banner/yellow_banner.png" alt="yellow" width="250" height="250">
+
+                    </div>
+
+
                 </div>
 
-
+                <!-- Left and right controls -->
+                <!--<a class="left carousel-control" href="#myCarousel2" role="button" data-slide="prev">-->
+                <!--<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>-->
+                <!--<span class="sr-only">Previous</span>-->
+                <!--</a>-->
+                <!--<a class="right carousel-control" href="#myCarousel2" role="button" data-slide="next">-->
+                <!--<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>-->
+                <!--<span class="sr-only">Next</span>-->
+                <!--</a>-->
             </div>
 
         </div>
-        <div id="hat_bottom">
-
+        <div id="two_simple_banner">
+            <div class="left">
+                <img th:src="${user!=null}? 'images/banner/left_user.png' : 'images/banner/left_anon.png'">
+            </div>
+            <div class="right">
+                <img th:src="${user!=null}? 'images/banner/right_user.png' : 'images/banner/right_anon.png'">
+            </div>
         </div>
-
-    </div>
-    <div class="container">
-        <br>
+        <div id="carousel_product">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
@@ -99,45 +103,16 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
 
-                <div class="item active">
-                    <img src="images/prodact_foto/7.jpg" alt="Chania" width="250" height="250">
+
+                <div th:each="product : ${products}" th:class="${product.id}==0? 'item active' :  'item'">
+                    <img th:src="${product.imgUrl}" th:alt="${product.name}" width="250" height="250">
                     <div class="carousel-caption">
-                        <h3>Chania</h3>
-                        <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
-                    </div>
-                </div>
-                <div class="item" th:each="product : ${products}">
-                    <img th:src="${product.imgUrl}" alt="Chania" width="250" height="250">
-                    <div class="carousel-caption">
-                        <h3>Chania</h3>
-                        <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+                        <h3 th:text="${product.name}">NAME</h3>
+                        <p th:text="${product.price} + '$.' " class="price">1000$</p>
                     </div>
 
                 </div>
 
-                <!--<div class="item">-->
-                <!--<img src="/images/bg000000.jpg" alt="Chania" width="460" height="345">-->
-                <!--<div class="carousel-caption">-->
-                <!--<h3>Chania</h3>-->
-                <!--<p>The atmosphere in Chania has a touch of Florence and Venice.</p>-->
-                <!--</div>-->
-                <!--</div>-->
-
-                <!--<div class="item">-->
-                <!--<img src="/images/bg000000.jpg" alt="Flower" width="460" height="345">-->
-                <!--<div class="carousel-caption">-->
-                <!--<h3>Flowers</h3>-->
-                <!--<p>Beautiful flowers in Kolymbari, Crete.</p>-->
-                <!--</div>-->
-                <!--</div>-->
-
-                <!--<div class="item">-->
-                <!--<img src="/images/bg000000.jpg" alt="Flower" width="460" height="345">-->
-                <!--<div class="carousel-caption">-->
-                <!--<h3>Flowers</h3>-->
-                <!--<p>Beautiful flowers in Kolymbari, Crete.</p>-->
-                <!--</div>-->
-                <!--</div>-->
 
             </div>
 
@@ -151,12 +126,11 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
+        </div>
     </div>
 
+    <div th:insert="footer :: footer"></div>
 
-    <div id="footer">
-        <p>Get your greeting <a href="/greeting">here</a></p>
-    </div>
 
 </div>
 
@@ -185,6 +159,33 @@ $(document).ready(function(){
     });
     $(".right").click(function(){
         $("#myCarousel").carousel("next");
+    });
+});
+
+$(document).ready(function(){
+    // Activate Carousel
+    $("#myCarousel2").carousel({interval: 700});
+
+    // Enable Carousel Indicators
+    $(".item1").click(function(){
+        $("#myCarousel2").carousel(0);
+    });
+    $(".item2").click(function(){
+        $("#myCarousel2").carousel(1);
+    });
+    $(".item3").click(function(){
+        $("#myCarousel2").carousel(2);
+    });
+    $(".item4").click(function(){
+        $("#myCarousel2").carousel(3);
+    });
+
+    // Enable Carousel Controls
+    $(".left").click(function(){
+        $("#myCarousel2").carousel("prev");
+    });
+    $(".right").click(function(){
+        $("#myCarousel2").carousel("next");
     });
 });
 
