--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Getting Started: Serving Web Content</title>
-    <link href="css/mystyle.css" rel="stylesheet" type="text/css" />
+    <link href="css/mystyle.css" rel="stylesheet" type="text/css"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -34,28 +34,33 @@
 </head>
 <body onload="startTime()">
 <div class="maindiv" id="main_div">
+
     <div th:insert="hat :: hat"></div>
-<form th:action="@{/registration}" method="get">
-    <button class="btn btn-md btn-warning btn-block" type="Submit">На стараницу регистрации</button>
-</form>
 
-<div class="container">
 
-    <form th:action="@{/login}" method="POST" class="form-signin">
-        <h3 class="form-signin-heading" th:text="Welcome"></h3>
-        <br/>
+    <div class="container">
 
-        <input type="text" id="email" name="email"  th:placeholder="Email"
-               class="form-control" /> <br/>
-        <input type="password"  th:placeholder="Password"
-               id="password" name="password" class="form-control" /> <br />
+        <div>
+            Список продуктов
+            <table id="product_listing_table">
+                <tr>
+                    <th>Название</th>
+                    <th>Цена</th>
+                    <th>Детали</th>
+                </tr>
+                <tr th:each="product : ${products}">
+                    <td th:text="${product.name}"></td>
+                    <td th:text="${product.price}"></td>
+                    <td><a th:href="'/details?id=' + ${product.id}"> Детали</a></td>
 
-        <div align="center" th:if="${param.error}">
-            <p style="font-size: 20; color: #FF1C19;">Email or Password invalid, please verify</p>
+                </tr>
+            </table>
+
+
         </div>
-        <button class="btn btn-lg btn-primary btn-block" name="Submit" value="Login" type="Submit" th:text="Login"></button>
-    </form>
-</div>
+
+
+    </div>
 
     <div th:insert="footer :: footer"></div>
 
