--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,10 +5,6 @@
     <link href="css/mystyle.css" rel="stylesheet" type="text/css" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
     <script type="text/javascript">
         function startTime()
         {
@@ -33,163 +29,47 @@
 </head>
 <body onload="startTime()">
 <div class="maindiv" id="main_div">
-    <div th:insert="hat :: hat"></div>
 
-
-    <div class="container">
-        <div id="head_banner">
-            <div id="myCarousel2" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ol class="carousel-indicators">
-                    <li data-target="#myCarousel2" data-slide-to="0" class="active"></li>
-                    <li data-target="#myCarousel2" data-slide-to="1"></li>
-                    <li data-target="#myCarousel2" data-slide-to="2"></li>
-                    <li data-target="#myCarousel2" data-slide-to="3"></li>
-                </ol>
-
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner" role="listbox">
-
-                    <div class="item active">
-                        <img src="/images/banner/blue_banner.png" alt="blue" width="250" height="250">
-
-                    </div>
-                    <div class="item">
-                        <img src="/images/banner/green_banner.png" alt="green" width="250" height="250">
-
-                    </div>
-                    <div class="item">
-                        <img src="/images/banner/red_banner.png" alt="red" width="250" height="250">
-
-                    </div>
-                    <div class="item">
-                        <img src="/images/banner/yellow_banner.png" alt="yellow" width="250" height="250">
-
-                    </div>
-
-
-                </div>
-
-                <!-- Left and right controls -->
-                <!--<a class="left carousel-control" href="#myCarousel2" role="button" data-slide="prev">-->
-                <!--<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>-->
-                <!--<span class="sr-only">Previous</span>-->
-                <!--</a>-->
-                <!--<a class="right carousel-control" href="#myCarousel2" role="button" data-slide="next">-->
-                <!--<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>-->
-                <!--<span class="sr-only">Next</span>-->
-                <!--</a>-->
-            </div>
-
-        </div>
-        <div id="two_simple_banner">
+    <div id="hat">
+        <div id="hat_top">
             <div class="left">
-                <img th:src="${user!=null}? 'images/banner/left_user.png' : 'images/banner/left_anon.png'">
+                <img id="img_1" src="images/logo.png" width="130px" height="130px" alt="Logo " />
             </div>
+            <div class="left">
+                <p id="clock"> dsghsdgh!!!!!</p>
+
+            </div>
+
             <div class="right">
-                <img th:src="${user!=null}? 'images/banner/right_user.png' : 'images/banner/right_anon.png'">
-            </div>
-        </div>
-        <div id="carousel_product">
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-                <li data-target="#myCarousel" data-slide-to="3"></li>
-            </ol>
 
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-
-
-                <div th:each="product : ${products}" th:class="${product.id}==0? 'item active' :  'item'">
-                    <img th:src="${product.imgUrl}" th:alt="${product.name}" width="250" height="250">
-                    <div class="carousel-caption">
-                        <h3 th:text="${product.name}">NAME</h3>
-                        <p th:text="${product.price} + '$.' " class="price">1000$</p>
-                    </div>
-
+                <div th:switch="${#authentication}? ${#authorization.expression('isAuthenticated()')} : ${false}">
+                    <span th:case="${false}">User is not logged in</span>
+                    <span th:case="${true}">Logged in user</span>
+                    <span th:case="*">Should never happen, but who knows...</span>
                 </div>
 
+                <form th:action="@{/logout}" method="post">
+                    <input type="submit" value="Sign Out"/>
+                </form>
+
 
             </div>
 
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
         </div>
+        <div id="hat_bottom">
+
         </div>
+
+    </div>
+    <div id="content">
+
     </div>
 
-    <div th:insert="footer :: footer"></div>
-
+    <div id="footer">
+        <p>Get your greeting <a href="/greeting">here</a></p>
+    </div>
 
 </div>
-
-<script>
-$(document).ready(function(){
-    // Activate Carousel
-    $("#myCarousel").carousel({interval: 500});
-
-    // Enable Carousel Indicators
-    $(".item1").click(function(){
-        $("#myCarousel").carousel(0);
-    });
-    $(".item2").click(function(){
-        $("#myCarousel").carousel(1);
-    });
-    $(".item3").click(function(){
-        $("#myCarousel").carousel(2);
-    });
-    $(".item4").click(function(){
-        $("#myCarousel").carousel(3);
-    });
-
-    // Enable Carousel Controls
-    $(".left").click(function(){
-        $("#myCarousel").carousel("prev");
-    });
-    $(".right").click(function(){
-        $("#myCarousel").carousel("next");
-    });
-});
-
-$(document).ready(function(){
-    // Activate Carousel
-    $("#myCarousel2").carousel({interval: 700});
-
-    // Enable Carousel Indicators
-    $(".item1").click(function(){
-        $("#myCarousel2").carousel(0);
-    });
-    $(".item2").click(function(){
-        $("#myCarousel2").carousel(1);
-    });
-    $(".item3").click(function(){
-        $("#myCarousel2").carousel(2);
-    });
-    $(".item4").click(function(){
-        $("#myCarousel2").carousel(3);
-    });
-
-    // Enable Carousel Controls
-    $(".left").click(function(){
-        $("#myCarousel2").carousel("prev");
-    });
-    $(".right").click(function(){
-        $("#myCarousel2").carousel("next");
-    });
-});
-
-</script>
 
 
 </body>
