--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,46 +1,23 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <title>Getting Started: Serving Web Content</title>
+    <title>Spring Security Tutorial</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/login.css}" />
     <link href="css/mystyle.css" rel="stylesheet" type="text/css" />
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-    <script type="text/javascript">
-        function startTime()
-        {
-        var tm=new Date();
-        var h=tm.getHours();
-        var m=tm.getMinutes();
-        var s=tm.getSeconds();
-        m=checkTime(m);
-        s=checkTime(s);
-        document.getElementById('clock').innerHTML=h+":"+m+":"+s;
-        t=setTimeout('startTime()',500);
-        }
-        function checkTime(i)
-        {
-        if (i<10)
-        {
-        i="0" + i;
-        }
-        return i;
-        }
-
-    </script>
 </head>
-<body onload="startTime()">
+
+<body>
 <div class="maindiv" id="main_div">
-    <div th:insert="hat :: hat"></div>
 <form th:action="@{/registration}" method="get">
-    <button class="btn btn-md btn-warning btn-block" type="Submit">На стараницу регистрации</button>
+    <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Registration Page</button>
 </form>
 
 <div class="container">
-
+    <img th:src="@{/images/logo.png}" class="img-responsive center-block" width="200" height="200" alt="Logo" />
     <form th:action="@{/login}" method="POST" class="form-signin">
         <h3 class="form-signin-heading" th:text="Welcome"></h3>
         <br/>
@@ -56,12 +33,6 @@
         <button class="btn btn-lg btn-primary btn-block" name="Submit" value="Login" type="Submit" th:text="Login"></button>
     </form>
 </div>
-
-    <div th:insert="footer :: footer"></div>
-
-
 </div>
-
-
 </body>
 </html>
